# DSaaP-examples-FS26-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  black.yml  deploy_to_testpypi.yml  pylint.yml  pytest_codecov.yml  pytest_doctests.yml  release_pyinstaller_binaries.yml
data/: DNA_example.fasta
gc_content/: gc_content.py
test/: test_gc_content.py  test_main.py  test_read_sequences.py
test/data/: DNA_short.fasta  non_fasta.phy
