[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gc-content"
version = "0.1.0"
description = "GC content calculator for DNA sequences"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "biopython==1.86",
    "black==26.3.1",
    "pylint==4.0.5",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "coverage==7.13.5",
]

[project.scripts]
gc-content = "gc_content.gc_content:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gc_content*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
source = ["gc_content"]
omit = ["__init__.py"]
