[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gc-content-DSaaP-FS26"
version = "0.1.0"
description = "GC content calculator for DNA sequences, example from the ICLS@ZHAW Developing Software as a Product (DSaaP) course, FS26."
readme = "README.md"
authors = [{ name = "Jūlija Pečerska", email = "julija.pecerska@zhaw.ch" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["biopython==1.86", "black==26.3.1", "pylint==4.0.5"]

[project.urls]
Homepage = "https://acg-team.github.io/DSaaP-examples-FS26-workflow/"
Issues = "https://github.com/acg-team/DSaaP-examples-FS26-workflow/issues"

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-cov~=7.1.0",
    "coverage>=7.13.5,<7.14.0",
]

[project.scripts]
gc-content = "gc_content.gc_content:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
source = ["src"]
omit = ["__init__.py"]
